k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartamazon
  labels:
    name: smartamazon
    environment: production
